--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "use-debounce": "^10.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
